# csl

./: .gitignore  CMakeLists.txt  CPPUNITConfig.cmake  Doxyfile  Global.h  INSTALL  Mainpage.dox  Makefile  Makefile.am  Makefile.win  blog.txt  configure.ac  csl.sln  make_it_easy.sh  uml.xmi  wordWrinkler.cxx
Alphabet/: Alphabet.cxx  Alphabet.h  test.cxx
BestMatch/: BestMatch.cxx  BestMatch.h  bestMatch.cxx
Cislex/: Cislex.h  Cislex.pm  compileCislex.cxx  lookupCislex.cxx  test.pl
ErrDic/: ErrDic.h  ErrDic.tcc  ErrDicConstructor.h  Error.tcc  PatternApplier.h  PatternTracer.tcc  Position.tcc  brainstorm.cxx  compileED.cxx  createED.cxx  extractED.cxx  test.lex
FBDic/: FBDic.tcc  compileFBDic.cxx
Getopt/: Getopt.h
Hash/: Hash.h  test.cxx
JAVA/: Makefile
JNI/: JNIUtils.h  csl_DictSearch_DictSearch.cxx
LevDEA/: LevDEA.cxx  LevDEA.h  LevDEA_postables.cxx  LevDEA_postables.tcc  lev1data
LevFilter/: LevFilter.h
LevNDEA/: LevNDEA.cxx  LevNDEA.h  SuggestIter.h  test.cxx
MSMatch/: MSMatch.cxx  MSMatch.h  MSMatch.tcc  msFilter.cxx
MinDic/: MinDic.cxx  MinDic.h  MinDic.tcc  StateHash.h  compileMD.cxx  extractMD.cxx  lookupMD.cxx
MinDicString/: MinDicString.h  MinDicString.pm  compileCislex.cxx  lookupCislex.cxx  test.pl
Pattern/: Instruction.h  PatternSet.h  PosPattern.h
PermuteMatch/: List.h  PermuteMatch.cxx  PermuteMatch.h  permuteMatch.cxx
ResultSet/: ResultSet.cxx  ResultSet.h  test.cxx
SearchText/: SearchText.h
Test/: Test.h
TransTable/: Cell.h  TempState.h  TransTable.cxx  TransTable.h  (+1 more)
csl/: CMakeLists.txt  Global.h  Makefile  Makefile.am  Stopwatch.h  wordWrinkler.cxx
csl/Alphabet/: Alphabet.cxx  CMakeLists.txt  Makefile.am
csl/CSLLocale/: CSLLocale.cxx  CSLLocale.h  Makefile
csl/CSLLocale/Test/: TestCSLLocale.h  exec_testCSLLocale.cxx
csl/CompoundAnalyzer/: CompoundAnalyzer.cxx  CompoundAnalyzer.h  exec_compoundFilter.cxx
csl/DictSearch/: AnnotatedDictModule.h  CMakeLists.txt  DictSearch.cxx  DictSearch.h  StringDictModule.h  documentation.h  exec_dictSearch_demo.cxx
csl/DictSearch/Test/: CMakeLists.txt  TestDictSearch.h  exec_testDictSearch.cxx
csl/ErrDic/: CMakeLists.txt  ErrDic.h  ErrDic.tcc  PatternApplier.h  Position.tcc  VaamAsErrDic.h  createED.cxx  extractED.cxx  filterOldED.cxx  iErrDic.h  lookupED.cxx  reTranslate.pl
csl/ErrDic/Test/: CMakeLists.txt  TestErrDic.h  TestVaamAsErrDic.h  exec_testErrDic.cxx  exec_testVaamAsErrDic.cxx  small.patterns.txt
csl/FBDic/: FBDic.h  FBDic.tcc  Makefile.am  compileFBDic.cxx  documentation.h
csl/FBDicString/: FBDicString.tcc
csl/Getopt/: Getopt.h  Makefile.am
csl/Getopt/Test/: TestGetopt.h  testGetopt.cxx
csl/Hash/: Hash.h  Makefile.am
csl/INIConfig/: INIConfig.cxx  INIConfig.h  INIParser.cxx  INIParser.h  dictionary.c  dictionary.h
csl/INIConfig/Test/: CMakeLists.txt  TestINIConfig.h  exec_testINIConfig.cxx
csl/LevDEA/: LevDEA_postables.h  LevDEA_postables.tcc  Makefile.am
csl/LevFilter/: LevFilter.h  Makefile.am
csl/Locale/: Ctype_OldGerman.h
csl/MSMatch/: MSMatch.h  MSMatch.tcc  Makefile.am
csl/MinDic/: Makefile.am  MinDic.h  MinDic.pm  MinDic.tcc  StateHash.h  StateHash.tcc  documentation.h  extractMD.cxx
csl/MinDic/Test/: TestMinDic.h  testMinDic.cxx
csl/MinDic2/: MinDic2.h  MinDic2.tcc  documentation.h
csl/MinDicFlexible/: MinDicFlexible.h
csl/MinDicString/: CMakeLists.txt  MinDicString.h  MinDicString.pm  MinDicString.tcc  compileMDString.cxx  lookupMDString.cxx
csl/Pattern/: ComputeInstruction.cxx  ComputeInstruction.h  Instruction.cxx  Instruction.h  Interpretation.cxx  Interpretation.h  Pattern.cxx  Pattern.h  PatternGraph.h  PatternSet.h  PatternWeights.cxx  PatternWeights.h  PosPattern.h
csl/Pattern/Test/: CMakeLists.txt  TestComputeInstruction.h  TestPattern.h  testPattern.cxx
csl/ResultSet/: Makefile.am  ResultSet.h
csl/SimpleFSA/: Simple2TransTable.h  SimpleFSA.h
csl/SimpleFSA/CompoundDic/: CMakeLists.txt  CompoundDic.h  TrivialDecomp.h  exec_compileCompoundDic.cxx  exec_trivialDecomp.cxx
csl/SimpleFSA/MinDic/: minDic2dot.cxx
csl/SimpleFSA/Trie/: Trie.h  lookupTrie.cxx
csl/TransTable/: Cell.h  Cell_perfHash.h  Makefile.am  TempState.h  TransTable.cxx  TransTable.h  TransTable_perfHash.h  TransTable_perfHash.tcc  TransTable_standard.h  TransTable_standard.tcc  test.cxx
csl/Trie/: Trie.cxx  compileTrie.cxx
csl/Vaam/: Makefile.am  PatternGraph.h  PatternGraph_new.h  Vaam.h  Vaam.tcc  Vam.h  Vam.tcc
csl/Vaam/Test/: CMakeLists.txt  TestVaam.h  patterns.borders.txt  small.base.lex  small.patterns.txt  testVaam.cxx
csl/Val/: PatternGraph.h  Val.h  Val.tcc
csl/Val/Test/: TestVal.h
csl/Vam/: Makefile.am  PatternGraph.h  Vam.h  Vam.tcc  vamFilter.cxx
csl/Vam/Test/: testVam.cxx
csl/VariantRecognizer/: VariantRecognizer.h
csl/codecvt/: UTF8_Codecvt.h
csl/iDictionary/: iDictionary.h
csl/stoyan/bw_dic/: levhash32s1.c  levhash32s1.c.bak
csl/stoyan/transducer/: compdic32hu.c  readme.txt  rewrite32nu.c  rewrite32u.c
csl/tools/: get_alph.pl
tools/: CMakeLists.txt  Makefile.am  get_alph.pl  get_queries.pl  multi2single.pl  re_sort.pl  reverseDic.pl  text2lex.sh
tools/compileED/: CMakeLists.txt  compileED.cxx
tools/compileFBDic/: compileFBDic.cxx
tools/compileMD/: CMakeLists.txt  Makefile.am  compileMD.cxx
tools/compileMD2/: compileMD2.cxx
tools/compileMDString/: compileFBDicString.cxx  compileMDString.cxx
tools/dictSearch/: CMakeLists.txt  dictSearch.cxx  runDictSearch.cxx
tools/extractFBDic/: CMakeLists.txt  extractFBDic.cxx
tools/extractMD/: CMakeLists.txt  ReadMe.txt  extractMD.cxx  extractMD.vcproj  stdafx.cpp
tools/extractMDString/: CMakeLists.txt
tools/extractTT/: CMakeLists.txt  dotPath.cxx  extractTT.cxx
tools/lookupED/: CMakeLists.txt  lookupED.cxx
tools/lookupMD/: CMakeLists.txt  lookupMD.cxx  lookupMD.vcproj
tools/lookupMDString/: lookupMDString.cxx
tools/lookupTT/: lookupTT.cxx
tools/msFilter/: CMakeLists.txt  msFilter.cxx
tools/sort_dic/: sort_dic.cxx
tools/vaamFilter/: CMakeLists.txt  vaamFilter.cxx  vamFilter.cxx
tools/valFilter/: CMakeLists.txt  valFilter.cxx
(+47 files in other folders)
