AC_INIT([csl], [1.0], [uli@cis.uni-muenchen.de])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_LIBTOOL
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
	Makefile
	csl/Makefile
	csl/Getopt/Makefile
	csl/Alphabet/Makefile
	csl/TransTable/Makefile
	csl/MinDic/Makefile
	csl/FBDic/Makefile
	csl/Hash/Makefile
	csl/LevFilter/Makefile
	csl/LevDEA/Makefile
	csl/ResultSet/Makefile
	csl/MSMatch/Makefile
	csl/Vam/Makefile

	tools/Makefile
	tools/compileMD/Makefile

])
AC_OUTPUT
