add_subdirectory( extractMD )
add_subdirectory( extractTT )
add_subdirectory( compileMD )
add_subdirectory( compileMD2 )
add_subdirectory( lookupMD )
add_subdirectory( compileFBDic )
add_subdirectory( compileED )
add_subdirectory( lookupED )
add_subdirectory( msFilter )
add_subdirectory( vaamFilter )
add_subdirectory( sortLex )
