add_subdirectory( extractMD )
add_subdirectory( extractMDString )
add_subdirectory( extractTT )
add_subdirectory( compileMD )
add_subdirectory( compileMD2 )
add_subdirectory( compileMDString )
add_subdirectory( lookupMD )
add_subdirectory( lookupMDString )
add_subdirectory( compileFBDic )
add_subdirectory( extractFBDic )
add_subdirectory( compileED )
add_subdirectory( lookupED )
add_subdirectory( lookupTT )
add_subdirectory( msFilter )
add_subdirectory( vaamFilter )
add_subdirectory( sortLex )
